# novel-crawler

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
configs/: example.json
src/: __init__.py  cli.py  config.py
src/models/: __init__.py
src/services/: browser.py  config_generator.py  crawler.py  epub_importer.py  http.py  metadata.py
src/services/llm/: __init__.py  base.py  factory.py  ollama.py
src/utils/: chapters.py  html.py  logging.py  text.py
tests/: test_browser.py  test_cli.py  test_config_generator.py  test_crawler.py  test_env.py  test_epub_importer.py  test_http.py
