[project]
name = "novel-crawler"
version = "0.1.0"
description = "Configurable CLI crawler for public novel websites"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "httpx>=0.28.1",
    "playwright>=1.49.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
novel-crawler = "src.cli:main"
crawl = "src.cli:crawl_main"
gen-config = "src.cli:gen_config_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pyright>=1.1.390",
    "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
